--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "eq-chat-service"
 version = "0.1.0"
+packages = [
+    { include = "eq_chat_service" }
+]
 description = ""
 authors = [
     {name = "KhangPTT373",email = "phmtrntuankhang@gmail.com"}
@@ -22,6 +25,12 @@ dependencies = [
     "gevent (>=25.5.1,<26.0.0)",
     "pymongo (>=4.14.1,<5.0.0)",
     "confluent-kafka (>=2.11.1,<3.0.0)",
+    "numpy (>=1.26.0,<3.0.0)",
+    "langgraph (>=0.6,<0.7)",
+    "langchain-core (>=0.3.21,<0.4.0)",
+    "tavily-python (>=0.7.2,<0.9.0)",
+    "langgraph-cli[inmem] (>=0.4.0,<0.5.0)",
+    "qdrant-client (>=1.9.1,<2.0.0)",
 ]
 
 
